load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name="user",
    srcs=['user.proto']
)

go_proto_library(
    name='go_user',
    importpath = "./userpb",
    protos = [":user"],
    visibility = ["//visibility:public"],
)