## MODULE.bazel
module(
    name = "libs_utils",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", version = "0.33.0")
bazel_dep(name = "grpc", version = "1.48.1")
bazel_dep(name = "protobuf", version = "21.7")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_google_cloud_go_pubsub",
    "com_google_cloud_go_profiler",
    "com_github_sirupsen_logrus",
    "com_github_labstack_gommon",
    "com_github_labstack_echo_v4",
    "org_golang_google_protobuf",
    "org_golang_google_grpc",
    "org_golang_google_api",
    "com_github_neo4j_neo4j_go_driver_v4",
    "com_google_firebase_go_v4",
    "org_golang_x_net",
)
