load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "hello_proto",
    srcs = ["hello.proto"],
    deps = [
#        "//bar:bar_proto",
        "@com_google_protobuf//:any_proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/salazarhugo/cheers1/microservices/shared",
    proto = ":hello_proto",
    visibility = ["//visibility:public"],
#    deps = ["//bar:bar_go_proto"],
)