load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_proto_library(
    name = "hello_go_proto",
    importpath = "github.com/salazarhugo/cheers1/microservices/shared",
    proto = "//microservices/shared/hello:hello_proto",
    visibility = ["//visibility:public"],
#    deps = ["//hello:hello_go_proto"],
)

go_library(
    name = "hello",
    srcs = ["extra/extra.go"],
    embed = [":hello_go_proto"],
    importpath = "github.com/salazarhugo/cheers1/microservices/shared",
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/salazarhugo/cheers1/microservices/shared",
)