#load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
#load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix user-service
#gazelle(name = "gazelle")

#go_binary(
#    name="user-service",
#    srcs=["main.go"],
#    deps=[":user"]
#)
#
#go_library(
#    name="user-service",
#    importpath="cheers/user",
#    srcs=["main.go", "user.go"],
#    deps=[
#        "@google.golang.org//grpc",
#    ],
#)
#
##go_test(
##    name="user-service",
##    srcs=["main.go"],
##    deps=[":"]
##)
