load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "block.go",
        "check.go",
        "create.go",
        "follow.go",
        "get.go",
        "get_node.go",
        "get_user_items_in.go",
        "get_users_in.go",
        "health.go",
        "list_followers.go",
        "list_following.go",
        "list_suggestions.go",
        "search.go",
        "server.go",
        "unblock.go",
        "unfollow.go",
        "update.go",
    ],
    importpath = "github.com/salazarhugo/cheers1/services/user-service/internal/app",
    visibility = ["//visibility:public"],
    deps = [
        "@gen_go//cheers/type/user:user",
        "@gen_go//cheers/user/v1:user",
        "@com_github_golang_protobuf//ptypes/empty",
        "@com_github_labstack_gommon//log",
        "@libs_utils//:utils",
        "@libs_utils//pubsub:pubsub",
        "//internal/repository",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
