load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "block.go",
        "check.go",
        "create.go",
        "create_friend.go",
        "create_friend_request.go",
        "delete.go",
        "delete_friend.go",
        "delete_friend_request.go",
        "follow.go",
        "get.go",
        "get_node.go",
        "get_user_items_in.go",
        "get_users_in.go",
        "list_followers.go",
        "list_following.go",
        "list_suggestions.go",
        "search.go",
        "unblock.go",
        "unfollow.go",
        "unverify.go",
        "update.go",
        "update_admin.go",
        "update_business_account.go",
        "update_moderator.go",
        "user.go",
        "verify.go",
    ],
    importpath = "github.com/salazarhugo/cheers1/services/user-service/internal/repository",
    visibility = ["//services/user-service:__subpackages__"],
    deps = [
        "@gen_go//cheers/type/user:user",
        "@gen_go//cheers/user/v1:user",
        "@com_github_labstack_gommon//log",
        "@com_github_neo4j_neo4j_go_driver_v4//neo4j",
        "@libs_utils//:utils",
        "@libs_utils//mapper:mapper",
        "@libs_utils//pubsub:pubsub",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
